--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
+    "react-icons": "^4.2.0",
     "react-intl": "^5.12.4",
     "styled-components": "^5.2.1"
   },
