--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
     "react-intl": "^5.12.4",
+    "react-pdf": "^5.2.0",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
