--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@popmotion/popcorn": "^0.4.4",
     "babel-plugin-styled-components": "^1.12.0",
     "framer-motion": "^3.6.2",
     "gatsby": "^2.32.3",
@@ -16,6 +17,7 @@
     "gatsby-plugin-styled-components": "^3.10.0",
     "gatsby-source-filesystem": "^2.11.0",
     "gatsby-transformer-sharp": "^2.12.0",
+    "popmotion": "^9.3.6",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
