--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@popmotion/popcorn": "^0.4.4",
     "babel-plugin-styled-components": "^1.12.0",
     "canvas": "^2.8.0",
+    "embla-carousel": "^4.5.3",
     "framer-motion": "^3.6.2",
     "gatsby": "^2.32.3",
     "gatsby-image": "^2.11.0",
